<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#05080D">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/icon"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="30sp"
        android:textColor="#FFFFFF"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        app:layout_constrainedHeight="true"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="5dp"
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            app:layoutManager="LinearLayoutManager" />
    </LinearLayout>

    <Button
        android:id="@+id/saveButton"
        android:enabled="false"
        android:layout_width="100dp"
        android:layout_height="62dp"
        android:text="@string/res_text_action_save"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="14dp"/>

    <Button
        android:id="@+id/leaveButton"
        android:layout_width="100dp"
        android:layout_height="62dp"
        android:text="@string/res_text_action_exit"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="14dp"/>

    <Button
        android:id="@+id/goBackButton"
        android:layout_width="100dp"
        android:layout_height="62dp"
        android:text="@string/res_text_action_back"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="14dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>